chore: complete bd issues
